[package]
name = "rustdht"
version = "0.1.0"
edition = "2021"

[features]
default = []
native = []

[lib]
crate-type = ["cdylib", "rlib"]

# Exclude server binary from WASM builds
[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["native"]

[dependencies]
wasm-bindgen = "0.2"
futures = "0.3"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
log = "0.4"
js-sys = "0.3"
once_cell = "1.19"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = [
    "ed25519",
    "gossipsub",
    "kad",
    "macros",
    "mdns", 
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "dns"
] }
libp2p-webrtc = { git = "https://github.com/libp2p/rust-libp2p", package = "libp2p-webrtc", features = ["tokio"] }
tokio = { version = "1.28", features = ["full"] }
env_logger = "0.10"
rand = "0.8"

# WASM-only dependencies  
[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = [
    "ed25519",
    "gossipsub",
    "kad", 
    "macros",
    "ping",
    "yamux",
    "wasm-bindgen",
    "serde"
] }
libp2p-webrtc-websys = { git = "https://github.com/libp2p/rust-libp2p", package = "libp2p-webrtc-websys" }
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["RtcPeerConnection", "RtcDataChannel", "console"] }
wasm-logger = "0.2"
